particles working, field input

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "gl-matrix": "^3.4.3",
     "ngx-device-detector": "^3.0.0",
+    "perf_hooks": "^0.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
